--- a/doc/SmallFiles.tex
+++ b/doc/SmallFiles.tex
@@ -112,12 +112,6 @@ Writing 9k files
   \hline
   1k        &  9min (16/sec)  &      70min &         ??? &              \\
   \hline
-  4k & ??? & ??? & ??? & & \\
-  \hline
-  10k & ??? & ??? & ??? & & \\
-  \hline
-  40k & ??? & ??? & ??? & & \\
-  \hline
   1M        & 29min (5.1/sec) & ???        &         ??? &        40min \\
   \hline
   5M        & 29min (5.1/sec) & ???        &         ??? &        40min \\
@@ -129,19 +123,9 @@ Writing 9k files
 Writing 90k files
 \begin{tabular}{|r|r|r|r|r|}
   \hline
-  file size & write files  & archive 20 & archive 100 & archive 1000 \\
+  file size & write files  & archive 20 & archive 100 & archive 2000 \\
   \hline
-  1k        & & & & \\
-  \hline
-  4k        & & & & \\
-  \hline
-  10k       & & & & \\
-  \hline
-  40k       & & & & \\
-  \hline
-  1M        & & & & \\
-  \hline
-  5M        & & & & \\
+  5M        & 312min (4.7/sec) & & & 324min \\
   \hline
   10M       & & & & \\
   \hline
