add statistics of long run + retrieval timings

--- a/doc/SmallFiles.tex
+++ b/doc/SmallFiles.tex
@@ -112,7 +112,7 @@ Writing 9k files
   \hline
   1k        &  9min (16/sec)  &      70min &         ??? &              \\
   \hline
-  1M        & 29min (5.1/sec) & ???        &         ??? &        40min \\
+  1M        & & & & \\
   \hline
   5M        & 29min (5.1/sec) & ???        &         ??? &        40min \\
   \hline
@@ -125,11 +125,13 @@ Writing 90k files
   \hline
   file size & write files  & archive 20 & archive 100 & archive 2000 \\
   \hline
-  5M        & 312min (4.7/sec) & & & 324min \\
+  5M        & 312min (4.7/sec) & & & 368min \\
   \hline
   10M       & & & & \\
   \hline
 \end{tabular}
+
+Retrieving a file from an archive (using dcap) takes about 3s.
 
 \section{Outlook}
 
