add possible error causes

--- a/doc/SmallFiles.tex
+++ b/doc/SmallFiles.tex
@@ -174,4 +174,7 @@ Create an installer to easily install the scripts, nailgun and the chimera nails
 \subsection{interrupting pack-files.sh while collecting files.}
 This may cause the machine to crash.
 
+\subsection{file input stream pauses}
+Sometimes dCache refuses to accept more files for a couple of seconds}
+
 \end{document}
