add more possible future features

--- a/doc/SmallFiles.tex
+++ b/doc/SmallFiles.tex
@@ -161,12 +161,14 @@ archived.
 \subsection{Installer}
 Create an installer to easily install the scripts, nailgun and the chimera nails.
 
-\subsection{Configurable options}
+\subsection{Possible enhancements}
 \begin{itemize}
-  \item chimera parameters on hsm level instead of hardcoded in the script
-  \item optionally bundle subdirectories into one archive
-  \item archive size per directory
-  \item unpack all files from archive instead of only requested
+  \item Chimera parameters on hsm level instead of hardcoded in the script
+  \item Optionally bundle subdirectories into one archive
+  \item Archive size per directory
+  \item Unpack all files from archive instead of only requested
+  \item Archive by file count
+  \item Specify min and max size of archive
 \end{itemize}
 
 \section{Remaining problems}
