--- a/doc/SmallFiles.tex
+++ b/doc/SmallFiles.tex
@@ -167,7 +167,7 @@ Create an installer to easily install the scripts, nailgun and the chimera nails
   \item Optionally bundle subdirectories into one archive
   \item Archive size per directory
   \item Unpack all files from archive instead of only requested
-  \item Archive by file count
+  \item Archive by file count or specified file size $\rightarrow$ improve performance
   \item Specify min and max size of archive
 \end{itemize}
 
