--- a/src/tex/SmallFiles.tex
+++ b/src/tex/SmallFiles.tex
@@ -116,38 +116,38 @@ The statistics were created using the following machines:
 
 \subsection{Writing files in 1 pool}
 
-\begin{tabular}{|r||r||r|}
+\begin{tabular}{|r|r||r|r|r|}
   \hline
-  file size & file count & time \\
+  file size & file count & user & system & total \\
   \hline
-  1k & 1000 &  \\
+  1k & 1000 & 0.84 & 6.54 & 0:46.12 \\
   \hline
-  1k & 2000 &  \\
+  1k & 2000 & 1.67 & 13.25 & 1:37.65 \\
   \hline
-  1k & 4000 &\\
+  1k & 4000 & 3.37 & 26.96 & 4:02. \\
   \hline
-  1k & 10000 &\\
+  1k & 10000 & 9.42 & 71.40 & 11:11.51 \\
   \hline
-  1k & 20000 &\\
+  1k & 20000 & 20.98 & 157.49 & 29:46.28 \\
   \hline
-  1k & 100000 &\\
+  1k & 100000 & 121.38 & 1254.04 & 3:13:10.00 \\
   \hline
 \end{tabular}
 
-\begin{tabular}{|r||r||r|}
+\begin{tabular}{|r|r||r|r|r|}
   \hline
-  file size & file count & time \\
-  2k & 1000 & \\
+  file size & file count & user & system & total \\
+         2k & 1000 & 0.85 & 6.53 & 0:49.58 \\
   \hline
-  2k & 2000 &\\
+  2k & 2000 & 1.75 & 13.17 & 1:40.85 \\
   \hline
-  2k & 4000 &\\
+  2k & 4000 & 3.55 & 26.78 & 3:57.29 \\
   \hline
-  2k & 10000 &\\
+  2k & 10000 & 9.47 & 70.86 & 10:50.78 \\
   \hline
-  2k & 20000 &\\
+  2k & 20000 & & &\\
   \hline
-  2k & 100000 &\\
+  2k & 100000 & & &\\
   \hline
 \end{tabular}
 
