--- a/src/main/ipy/SmallFiles-Analysis.ipynb
+++ b/src/main/ipy/SmallFiles-Analysis.ipynb
@@ -1524,6 +1524,37 @@
      "input": [],
      "language": "python",
      "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "../resources/csv/create2.csv\n",
+        "../resources/csv/create.csv\n",
+        "../resources/csv/find2.csv\n",
+        "../resources/csv/find.csv\n",
+        "../resources/csv/ls2.csv\n",
+        "../resources/csv/ls.csv\n",
+        "../resources/csv/read2.csv\n",
+        "../resources/csv/read.csv\n",
+        "../resources/csv/stat2.csv\n",
+        "../resources/csv/stat.csv\n",
+        "../resources/csv/system.csv\n",
+        "../resources/csv/tar6.csv\n",
+        "../resources/csv/write2.csv\n",
+        "../resources/csv/write.csv\n",
+        "../resources/csv/zip6.csv\n"
+       ]
+      }
+     ],
+     "prompt_number": 11
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [],
+     "language": "python",
+     "metadata": {},
      "outputs": []
     }
    ],
