add p2p and staging configuration for PoolManager

--- a/src/main/ipy/sf-patch_for_head_node.ipynb
+++ b/src/main/ipy/sf-patch_for_head_node.ipynb
@@ -88,12 +88,22 @@
      "prompt_number": 3
     },
     {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
+     "cell_type": "markdown",
      "metadata": {},
-     "outputs": []
+     "source": [
+      "Login to the admin interface and active p2p and staging in the PoolManager"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "1. <code>cd PoolManager</code>\n",
+      "1. <code>pm set -p2p-allowed=yes</code>\n",
+      "1. <code>pm set -p2p-fortransfers=yes</code>\n",
+      "1. <code>pm set -stage-allowed=yes</code>\n",
+      "1. <code>save</code>"
+     ]
     }
    ],
    "metadata": {}
